# job-queue-service

./: .gitignore  AI_USAGE.md  DECISIONS.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  logging.py  models.py  redis_client.py  schemas.py  state.py
app/api/: main.py  routes.py
app/jobs/: __init__.py  batch.py  email.py  registry.py  report.py  webhook.py
app/worker/: main.py  worker.py
tests/: conftest.py  test_api.py  test_cancel.py  test_idempotency.py  test_lifecycle.py  test_priority.py  test_retry.py  test_worker.py
